--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "puppeteer": "^20.5.0"
+    "fs": "^0.0.1-security",
+    "puppeteer": "^20.5.0",
+    "puppeteer-cluster": "^0.23.0"
   }
 }
